--- a/package.json
+++ b/package.json
@@ -26,5 +26,13 @@
     "chai": "^4.1.2",
     "mocha": "^5.2.0",
     "sinon": "^6.1.3"
-  }
+  },
+  "keywords": [
+    "postcss-import",
+    "import",
+    "alias",
+    "resolver",
+    "resolve",
+    "@import"
+  ]
 }
